# cpp-config-center

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  build.sh  config-server.yaml  configer.sh
.github/workflows/: ci.yml
cmake/: boost.cmake  googletest.cmake  jwt-cpp.cmake  nlohmann_json.cmake  protobuf_grpc.cmake  sqlite_orm.cmake  yaml-cpp.cmake
docs/: api.md  deployment.md  grpc.md  sdk-guide.md
include/config-center/api/: api_types.h  auth_handler.h  config_handler.h  grpc_service.h  health_handler.h  namespace_handler.h  notification_handler.h  publish_handler.h
include/config-center/auth/: auth_types.h
include/config-center/config/: config_parser.h
include/config-center/publish/: publish_engine.h
include/config-center/server/: grpc_server.h  http_server.h
include/config-center/storage/: config_store.h  data_types.h  mysql_config_store.h  namespace_manager.h  sqlite_config_store.h
include/config-center/subscription/: notification_channel.h
openspec/changes/cpp-config-center/: design.md  proposal.md  tasks.md
openspec/changes/cpp-config-center/specs/client-sdk/: spec.md
openspec/changes/cpp-config-center/specs/config-api/: spec.md
openspec/changes/cpp-config-center/specs/config-persistence/: spec.md
openspec/changes/cpp-config-center/specs/config-publish/: spec.md
openspec/changes/cpp-config-center/specs/config-subscription/: spec.md
openspec/changes/cpp-config-center/specs/namespace-management/: spec.md
proto/: CMakeLists.txt  config_service.proto
sdk/: CMakeLists.txt
sdk/include/config-center/: config_client.h
sdk/src/: callback_manager.cpp  config_cache.cpp  config_client.cpp  local_file_cache.cpp  reconnect_policy.cpp  subscription_manager.cpp
src/: CMakeLists.txt  main.cpp
src/api/: api_types.cpp  auth_handler.cpp  config_handler.cpp  grpc_service.cpp  health_handler.cpp  namespace_handler.cpp  notification_handler.cpp  publish_handler.cpp
src/auth/: auth_middleware.cpp  auth_types.cpp  jwt_manager.cpp  user_manager.cpp
src/config/: config_parser.cpp
src/publish/: approval_engine.cpp  draft_manager.cpp  publish_engine.cpp  release_engine.cpp  release_rule_engine.cpp
src/server/: grpc_server.cpp  http_server.cpp
src/storage/: config_store.cpp  mysql_config_store.cpp  namespace_manager.cpp  sqlite_config_store.cpp
src/subscription/: catch_up.cpp  long_polling.cpp  notification_channel.cpp  watch_stream.cpp
tests/: CMakeLists.txt
tests/integration/: test_client_sdk.cpp  test_grpc_api.cpp  test_http_api.cpp  test_mysql_storage.cpp  test_publish_workflow.cpp  test_sqlite_storage.cpp  test_subscription.cpp
